Added basic controls

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <canvas id="canvas"  width="600" height="600"></canvas>
 <a href="#" onClick="run()">Run<a/>
 <a href="#" onClick="nextStep()">Next Step</a>
+<a href="#" onClick="pause()">Pause</a>
+<a href="#" onClick="reset()">Reset</a>
 <script src="conway.js"></script>
 </script>
 
