Adding randomization; refactoring

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <a href="#" onClick="nextStep()">Next Step</a>
 <a href="#" onClick="pause()">Pause</a>
 <a href="#" onClick="reset()">Reset</a>
+<a href="#" onClick="randomize()">Randomize</a>
 <script src="conway.js"></script>
 </script>
 
