--- a/index.html
+++ b/index.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Conway's Game of Life in JS+Canvas</title>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+  <link rel="stylesheet" href="style.css">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </head>
 <body>
+<div class="menu">
+  <div class="btn-group" role="group">
+    <button type="button" class="btn btn-success" onClick="run()">Run <span class="glyphicon glyphicon-play"></span></button>
+    <button type="button" class="btn btn-default" onClick="nextStep()">Next Step <span class="glyphicon glyphicon-step-forward"></span></button>
+    <button type="button" class="btn btn-warning" onClick="pause()">Pause <span class="glyphicon glyphicon-pause"></span></button>
+    <button type="button" class="btn btn-danger" onClick="reset()">Reset <span class="glyphicon glyphicon-off"></span></button>
+    <button type="button" class="btn btn-info" onClick="randomize()">Randomize <span class="glyphicon glyphicon-th"></span></button>
+  </div>
+</div>
+
 <canvas id="canvas"  width="1200" height="1200"></canvas>
-<a href="#" onClick="run()">Run<a/>
-<a href="#" onClick="nextStep()">Next Step</a>
-<a href="#" onClick="pause()">Pause</a>
-<a href="#" onClick="reset()">Reset</a>
-<a href="#" onClick="randomize()">Randomize</a>
+
 <script src="conway.js"></script>
 </script>
 
