--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+  <link href='http://fonts.googleapis.com/css?family=Lato:900' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="style.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-  <<script src="app.js"></script>
+  <script src="app.js"></script>
 </head>
 <body ng-app="conway">
 <div class="menu" ng-controller="mainCtrl">
+  <div class="title">Conway's Game of Life</div>
   <div class="btn-group" role="group">
     <button type="button" class="btn btn-success" ng-click="conway.run()">Run <span class="glyphicon glyphicon-play"></span></button>
     <button type="button" class="btn btn-default" ng-click="conway.nextStep()">Next Step <span class="glyphicon glyphicon-step-forward"></span></button>
@@ -19,14 +22,21 @@
     <button type="button" class="btn btn-danger" ng-click="conway.reset()">Reset <span class="glyphicon glyphicon-off"></span></button>
     <button type="button" class="btn btn-info" ng-click="conway.randomize()">Randomize <span class="glyphicon glyphicon-th"></span></button>
   </div>
+  <div class="settings">
+    <span class="cog glyphicon glyphicon-cog rotate"></span>
+    <div class="cell-size">
+      <span ng-click="decreaseSize()" class="glyphicon glyphicon-minus"></span>Cell Size<span ng-click="increaseSize()" class="glyphicon glyphicon-plus"></span>
+    </div>
+    <div class="speec">
+      <span ng-click="decreaseSpeec()" class="glyphicon glyphicon-minus"></span>Speed<span ng-click="increaseSpeed()" class="glyphicon glyphicon-plus"></span>
+    </div>
+  </div>
 
-  <div class="settings"><span class="glyphicon glyphicon-cog rotate"></span></div>
 </div>
 
-<canvas id="canvas"  width="1200" height="1200"></canvas>
-
-<script src="conway.js"></script>
-</script>
+<div class="canvas-container">
+  <canvas id="canvas"  width="1200" height="1200"></canvas>
+</div>
 
 </body>
 </html>
