--- a/index.html
+++ b/index.html
@@ -13,20 +13,33 @@
   <script src="app.js"></script>
 </head>
 <body ng-app="conway">
-<div class="menu" ng-controller="mainCtrl">
-  <div class="title">Conway's Game of Life</div>
-  <div class="controls">
-    <span ng-click="conway.run()" class="glyphicon glyphicon-play control"></span>
-    <span ng-click="conway.nextStep()" class="glyphicon glyphicon-step-forward control"></span>
-    <span ng-click="conway.pause()" class="glyphicon glyphicon-pause control"></span>
-    <span ng-click="conway.reset()" class="glyphicon glyphicon-off control"></span>
-    <span ng-click="conway.randomize()" class="glyphicon glyphicon-th control"></span>
+<div ng-controller="mainCtrl">
+  <div class="menu" >
+    <div class="title">Conway's Game of Life</div>
   </div>
-</div>
 
-<div class="canvas-container">
-  <canvas id="canvas"  width="1000" height="1000"></canvas>
-</div>
+  <div class="controls">
+    <div class="control-container">
+      <span ng-click="conway.run()" class="glyphicon glyphicon-play control"></span>
+    </div>
+    <div class="control-container">
+      <span ng-click="conway.nextStep()" class="glyphicon glyphicon-step-forward control"></span>
+    </div>
+    <div class="control-container">
+      <span ng-click="conway.pause()" class="glyphicon glyphicon-pause control"></span>
+    </div>
+    <div class="control-container">
+      <span ng-click="conway.reset()" class="glyphicon glyphicon-off control"></span>
+    </div>
+    <div class="control-container">
+      <span ng-click="conway.randomize()" class="glyphicon glyphicon-th control"></span>
+    </div>
+  </div>
 
+  <div class="canvas-container">
+    <canvas id="canvas"  width="1000" height="1000"></canvas>
+  </div>
+
+</div>
 </body>
 </html>
