Tracking generations and number of live cells

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
     </div>
   </div>
 
+  <div class="stats">
+    <p>Generations: {{ generations }} || Alive Cells: {{ aliveCells }}</p>
+  </div>
+
   <div class="canvas-container">
     <canvas id="canvas"  width="1000" height="1000"></canvas>
   </div>
