Adding Percent Alive counter

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   </div>
 
   <div class="stats">
-    <p>Generations<span>{{generations}}</span> Alive Cells<span>{{ aliveCells }}</span> Speed<span>{{ speed }}ms</span></p>
+    <p>Generations<span>{{generations}}</span> Alive Cells<span>{{ aliveCells }}</span>Percent Alive<span>{{ alivePercentage | number:1 }}% </span> Speed<span>{{ speed }}ms</span></p>
   </div>
 
   <div class="canvas-container">
