--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Conway's Game of Life in JS+Canvas</title>
+	<title>Conway's Game of Life in JS+Canvas - Amir</title>
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
   <link href='http://fonts.googleapis.com/css?family=Lato:900' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="style.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <script src="app.js"></script>
@@ -53,6 +54,12 @@
       <div ng-click="conway.slowDown()" class="glyphicon glyphicon-fast-backward control">
         <span class="control-label">Slow Down</span>
       </div>
+    </div>
+    <div class="link github-link">
+        <a title="Github" href="https://github.com/akurtovic/conway"><i class="fa fa-github"></i></a>
+    </div>
+    <div class="link website-link">
+        <a title="amirkurtovic.com" href="http://www.amirkurtovic.com"><i class="fa fa-external-link"></i></a>
     </div>
   </div>
 
